--- a/Python Absolute Beginner/Module_1_1.1_Absolute_Beginner_START_HERE.ipynb
+++ b/Python Absolute Beginner/Module_1_1.1_Absolute_Beginner_START_HERE.ipynb
@@ -86,22 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
-   "source": [
-    "# [ ] Review the code, run the code\n",
-    "print(\"Hello World!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -111,7 +101,27 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# [ ] Review the code, run the code\n",
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Programer!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Hello Programer!\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,10 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So long and thanks for all the fish!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a program to print a Douglas Adams quote\n",
+    "print (\"So long and thanks for all the fish!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,7 +268,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# existing cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after edit, save!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# new cell\n",
+    "print ( \"after edit, save!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,21 +305,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# first cell"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# second cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ctrl + s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inserted cell\n",
+    "print ( \"Ctrl + s\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# third cell"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
