--- a/Python Absolute Beginner/Module_1_1.2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_1.2_Absolute_Beginner.ipynb
@@ -62,11 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strings go in single\n",
+      "or double quotes\n"
+     ]
+    }
+   ],
    "source": [
     "# examples of printing strings with single and double quotes\n",
     "print('strings go in single')\n",
@@ -84,16 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single\n",
+      "Double\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] enter a string in the print() function using single quotes\n",
-    "\n",
+    "print ('Single')\n",
     "# [ ] enter a string in the print() function using double quotes\n",
-    "\n"
+    "print (\"Double\")\n"
    ]
   },
   {
@@ -130,11 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299\n",
+      "2017\n"
+     ]
+    }
+   ],
    "source": [
     "# printing an Integer with python\n",
     "print(299)\n",
@@ -155,17 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n",
+      "69\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print an Integer\n",
-    "\n",
+    "print (42)\n",
     "\n",
     "# [ ] print a strings made of Integer characters\n",
-    "\n",
+    "print (\"69\")\n",
     "\n"
    ]
   },
@@ -224,11 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a string\n",
+      "I am a string\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review code and Run\n",
     "# initialize the variable\n",
@@ -243,12 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run this cell using Ctrl+Enter\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review code and Run\n",
     "# assign a new string to the current_msg\n",
@@ -273,14 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run this cell using Ctrl+Enter\n",
+      "I'm not in Kansas anymore\n"
+     ]
+    }
+   ],
    "source": [
     "# { ] run cell above then run this cell after completing the code as directed\n",
-    "\n"
+    "print (current_msg)\n",
+    "current_msg = \"I'm not in Kansas anymore\"\n",
+    "print (current_msg)"
    ]
   },
   {
@@ -359,11 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n",
+      "Joana\n"
+     ]
+    }
+   ],
    "source": [
     "test_value = 22\n",
     "print(test_value)\n",
@@ -384,19 +442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob Hope\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string value to a variable student_name\n",
-    "\n",
+    "student_name = \"Bob Hope\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n"
+    "print (student_name)\n"
    ]
   },
   {
@@ -412,20 +477,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mike Piazza\n",
+      "John Smoltz\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign the student_name variable  a different string value (a different name)\n",
-    "\n",
+    "student_name = \"Mike Piazza\"\n",
     "# [ ] print the value of variable student_name\n",
-    "\n",
+    "print (student_name)\n",
     "# [ ] assign a 3rd different string value, to the variable name \n",
-    "\n",
+    "student_name = \"John Smoltz\"\n",
     "# [ ] print the value of variable name\n",
-    "\n"
+    "print (student_name)\n"
    ]
   },
   {
@@ -442,19 +514,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kick the\n",
+      "5432\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assigning a value to a variable called bucket\n",
-    "\n",
+    "bucket = \"Kick the\"\n",
     "# [ ] print the value of bucket \n",
-    "\n",
+    "print (bucket)\n",
     "# [ ] assign an Integer value (no quotes) to the variable bucket\n",
-    "\n",
+    "bucket = 5432\n",
     "# [ ] print the value of bucket \n",
+    "print (bucket)\n",
     "\n",
     "\n"
    ]
@@ -484,16 +564,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "123\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print integer 123 number\n",
-    "\n",
+    "print (123)\n",
     "# [ ] print string \"123\" number\n",
-    "\n",
+    "print(\"123\")\n",
     "\n"
    ]
   },
@@ -522,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
