--- a/Python Absolute Beginner/Module_1_1.4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_1.4_Absolute_Beginner.ipynb
@@ -70,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding a pair of 2 digit Integers\n",
     "23 + 18"
@@ -80,9 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my name is Alyssa'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding 2 strings\n",
     "\"my name is \" + \"Alyssa\"  "
@@ -90,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my shoe color is brown'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Review and run code for adding a variable string and a literal string\n",
     "shoe_color = \"brown\"\n",
@@ -110,52 +143,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] add 3 integer numbers\n",
-    "\n"
+    "\n",
+    "23 + 10 + 123"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] add a float number and an integer number\n",
-    "\n"
+    "\n",
+    "12.4 + 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This notebook belongs to Sam'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Add the string \"This notebook belongs to \" and a string with your first name\n",
-    "\n"
+    "\n",
+    "\"This notebook belongs to \" + \"Sam\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Create variables sm_number and big_number and assign numbers then add the numbers\n",
-    "\n"
+    "sm_number=2\n",
+    "big_number=20\n",
+    "sm_number+big_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sam, remember to save the notebook frequently\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string value to the variable first_name and add to the string \", remember to save the notebook frequently\"\n",
-    "\n"
+    "first_name=\"Sam\"\n",
+    "print(first_name+\", remember to save the notebook frequently\")"
    ]
   },
   {
@@ -184,9 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "Happy Birthday Alton\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review & run code for assigning variables & using addition\n",
     "add_two = 34 + 16\n",
@@ -199,9 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "26\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  [ ] review & run code for Integer addition in variables and in a print function\n",
     "int_sum = 6 + 7\n",
@@ -212,9 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I do not wear a hat\n",
+      "at dinner\n"
+     ]
+    }
+   ],
    "source": [
     "# string addition in variables and in print()function\n",
     "hat_msg = \"I do not wear \" + \"a hat\"  \n",
@@ -562,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
