--- a/Python Absolute Beginner/Module_1_2.1_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.1_Absolute_Beginner.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1-2.1 Intro Python\n",
     "## Strings: input, testing, formatting\n",
@@ -28,9 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;  \n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font> \n",
@@ -51,11 +47,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a small int: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small int: \n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code - enter a small integer in the text box\n",
     "print(\"enter a small int: \")\n",
@@ -79,16 +101,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a student's name:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Sam\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] get input for the variable student_name\n",
-    "\n",
+    "print(\"Enter a student's name:\")\n",
+    "student_name = input()\n",
     "# [ ] determine the type of student_name\n",
-    "\n",
+    "type(student_name)\n",
     "\n"
    ]
   },
@@ -109,17 +160,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a name or number\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1.2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] run cell several times entering a name a int number and a float number after adding code below\n",
     "print(\"enter a name or number\")\n",
     "test_input = input()\n",
     "# [ ] insert code below to check the type of test_input\n",
-    "\n",
+    "type(test_input)\n",
     "\n"
    ]
   },
@@ -147,11 +226,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the student name:  Sam\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Sam\n"
+     ]
+    }
+   ],
    "source": [
     "student_name = input(\"enter the student name: \")  \n",
     "print(\"Hi \" + student_name)"
@@ -170,24 +267,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a city: Tifton\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The city name is:Tifton\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for a city name in the variable named city\n",
-    "\n",
+    "city = input(\"Enter the name of a city:\")\n",
     "# [ ] print the city name\n",
+    "print (\"The city name is: \" + city)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "<font size=\"4\" color=\"#B24C00\"  face=\"verdana\"> <B>Task 2 cont...</B></font>  \n",
@@ -207,18 +321,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a name:  Sam\n",
+      "Enter an age:  45\n",
+      "Do you wish to recieve an email?  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The name is: Sam\n",
+      "The age is: 45\n",
+      "Do they want email?no\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]create variables to store input: name, age, get_mail with prompts\n",
     "# for name, age and yes/no to being on an email list\n",
-    "\n",
+    "name = input (\"Enter a name: \")\n",
+    "age = input (\"Enter an age: \")\n",
+    "get_mail = input (\"Do you wish to recieve an email? \")\n",
     "\n",
     "# [ ] print a description + variable value for each variable\n",
-    "\n",
+    "print (\"The name is: \" + name)\n",
+    "print (\"The age is: \" + age)\n",
+    "print (\"Do they want email?\" + get_mail)\n",
     "\n"
    ]
   },
@@ -247,9 +387,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
