--- a/Python Absolute Beginner/Module_1_2.4_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.4_Absolute_Beginner.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1-2.4 Intro Python\n",
     "## Strings: input, testing, formatting\n",
@@ -28,9 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font>  \n",
@@ -55,22 +51,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ms. browning is in her office.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"ms. Browning is in her office.\".capitalize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Green green green and GREEN!\n"
+     ]
+    }
+   ],
    "source": [
     "fav_color = \"green\"\n",
     "print(fav_color.capitalize(), fav_color, fav_color,\"and\", fav_color.upper()+\"!\")"
@@ -88,47 +106,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your favorite food?  Filet Minon\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FILET MINON\n",
+      "filet minon\n",
+      "fILET mINON\n",
+      "Filet minon\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input for a variable, fav_food, that describes a favorite food\n",
-    "\n",
+    "fav_food = input(\"What is your favorite food? \")\n",
     "# [ ] display fav_food as ALL CAPS, used in a sentence\n",
-    "\n",
+    "print(fav_food.upper())\n",
     "\n",
     "# [ ] dispaly fav_food as all lower case, used in a sentence\n",
-    "\n",
+    "print(fav_food.lower())\n",
     "\n",
     "# [] display fav_food with swapped case, used in a sentence\n",
-    "\n",
+    "print(fav_food.swapcase())\n",
     "\n",
     "# [] display fav_food with capitalization, used in a sentence\n",
-    "\n",
+    "print(fav_food.capitalize())\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FOREST GREEN forest green fOREST gREEN Forest green\n"
+     ]
+    }
+   ],
    "source": [
     "fav_color = \"Forest Green\"\n",
     "# [] display the fav_color variable as upper, lower, swapcase, and capitalize formatting in a single print() statement\n",
-    "\n"
+    "\n",
+    "print(fav_color.upper(),fav_color.lower(),fav_color.swapcase(),fav_color.capitalize())"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font>\n",
@@ -140,20 +189,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<font size=\"4\" color=\"#00A0B2\"  face=\"verdana\"> <B>Example</B></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your favorite color?:  purple\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "purple\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code - test a capitalized color input\n",
     "fav_color = input('What is your favorite color?: ').lower()\n",
@@ -171,24 +236,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your favorite color?:  Purple\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PURPLE\n"
+     ]
+    }
+   ],
    "source": [
     "# [] input variable fav_color as upper\n",
-    "\n",
+    "fav_color = input('What is your favorite color?: ').upper()\n",
     "# [] print fav_color\n",
-    "\n",
+    "print (fav_color)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font>  \n",
@@ -208,12 +289,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code to test if a string is to be found in another string\n",
     "menu = \"salad, pasta, sandwich, pizza, drinks, dessert\"\n",
@@ -222,11 +314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'hello' in greeting =  False\n",
+      "'Hello' in greeting =  True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code to test case sensitive examples \n",
     "greeting = \"Hello World!\"\n",
@@ -243,11 +344,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'hello' in greeting =  False\n",
+      "'Hello' in greeting =  True\n",
+      "'hello' in greeting if lower used =  True\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code to test removing case sensitivity from a string comparison\n",
     "greeting = \"Hello World!\"\n",
@@ -269,16 +380,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pizza is on the menu = True\n",
+      "soup is on the menu = False\n",
+      "dessert is on the menu = True\n"
+     ]
+    }
+   ],
    "source": [
     "# [] print 3 tests, with description text, testing the menu variable for 'pizza', 'soup' and 'dessert'\n",
     "menu = \"salad, pasta, sandwich, pizza, drinks, dessert\"\n",
-    "\n",
-    "\n",
+    "print('pizza is on the menu =', 'pizza' in menu)\n",
+    "print('soup is on the menu =', 'soup' in menu)\n",
+    "print('dessert is on the menu =', 'dessert' in menu)\n",
     "\n"
    ]
   },
@@ -295,14 +420,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which food are you interested in? STEAK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is steak on the menu? True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a program where the user supplies input to search the menu\n",
-    "\n",
+    "menu_ask = input(\"Which food are you interested in?\").lower()\n",
+    "menu = \"salad, pasta, sandwich, pizza, drinks, dessert, steak, chicken\"\n",
+    "print(\"Is\",menu_ask,\"on the menu?\", menu_ask in menu)\n",
     "\n"
    ]
   },
@@ -322,26 +467,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menu: salad, pasta, sandwich, pizza, drinks, dessert, steak, chicken\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What are we adding to the menu? lamb\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salad, pasta, sandwich, pizza, drinks, dessert, steak, chicken, lamb\n"
+     ]
+    }
+   ],
    "source": [
     "# add to menu\n",
-    "\n"
+    "print(\"Menu:\", menu)\n",
+    "add_item = input(\"What are we adding to the menu?\")\n",
+    "new_menu = menu + \", \" + add_item\n",
+    "print (new_menu)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which food are you interested in? PORK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is pork on the menu? False\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing Add to Menu - create user input to search for an item on the new menu\n",
-    "\n"
+    "menu_ask = input(\"Which food are you interested in?\").lower()\n",
+    "print(\"Is\",menu_ask,\"on the menu?\", menu_ask in new_menu)\n"
    ]
   },
   {
@@ -355,23 +547,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red in paint colors =  True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the error\n",
     "paint_colors = \"red, blue, green, black, orange, pink\"\n",
-    "print('Red in paint colors = ',red in paint_colors)\n",
+    "print('Red in paint colors = ',\"red\" in paint_colors)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
    ]
@@ -394,9 +595,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
