--- a/Python Absolute Beginner/Module_1_1.5_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_1.5_Absolute_Beginner.ipynb
@@ -44,11 +44,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   * *\n",
+      "  *****\n",
+      " *     *\n",
+      "*       *\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# the letter 'A'\n",
     "print(\"    *\")\n",
@@ -61,9 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "<font size=\"6\" color=\"#B24C00\"  face=\"verdana\"> <B>Extra Task</B></font>  \n",
     "- create the flying bird in character art in the Code cell below\n",
@@ -80,14 +94,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_         _\n",
+      " \\       /\n",
+      "  \\ . . /\n",
+      "     V\n"
+     ]
+    }
+   ],
    "source": [
     "# create # [ ] flying bird character art \n",
-    "\n"
+    "\n",
+    "print(\"_         _\")\n",
+    "print(\" \\       /\")\n",
+    "print(\"  \\ . . /\")\n",
+    "print(\"     V\")"
    ]
   },
   {
@@ -100,14 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******\n",
+      "*\n",
+      "***\n",
+      "*\n",
+      "******\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] capital letter \"E\" character art\n",
-    "\n"
+    "\n",
+    "print(\"******\")\n",
+    "print(\"*\")\n",
+    "print(\"***\")\n",
+    "print(\"*\")\n",
+    "print(\"******\")"
    ]
   },
   {
@@ -135,9 +187,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
