--- a/Python Absolute Beginner/Module_1_2.2_Absolute_Beginner.ipynb
+++ b/Python Absolute Beginner/Module_1_2.2_Absolute_Beginner.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1-2.2 Intro Python\n",
     "## Strings: input, testing, formatting\n",
@@ -28,9 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# &nbsp;\n",
     "<font size=\"6\" color=\"#00A0B2\"  face=\"verdana\"> <B>Concepts</B></font>  \n",
@@ -57,11 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Collette!\n",
+      "Hello to Collette who is from the city\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code\n",
     "\n",
@@ -85,14 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI! You need a life\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print 3 strings on the same line using commas inside the print() function \n",
-    "\n"
+    "print(\"HI!\",\"You need\",\"a life\")\n"
    ]
   },
   {
@@ -120,11 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I will pick you up @ 6 for the party\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code\n",
     "print(\"I will pick you up @\",6,\"for the party\")"
@@ -132,11 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An Integer of 14 combined with strings causes 0 TypeErrors in comma formatted print!\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run code\n",
     "number_errors = 0\n",
@@ -154,21 +195,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI  6 Leave 8.9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use a print() function with comma separation to combine 2 numbers and 2 strings\n",
-    "\n"
+    "\n",
+    "print (\"HI \",6,\"Leave\",8.9)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<font size=\"6\" color=\"#B24C00\"  face=\"verdana\"> <B>Task 3</B></font>  \n",
     "**print() comma separated mixing of strings and variables**  \n",
@@ -183,18 +234,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Street name  First\n",
+      "Street Number? 214\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The address is 214 First\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for a street name in the variable, street\n",
-    "\n",
+    "street = input (\"Street name \")\n",
     "# [ ] get user input for a street number in the variable, st_number\n",
-    "\n",
+    "st_number = input (\"Street Number?\")\n",
     "# [ ] display a message about the street and st_number\n",
-    "\n",
+    "print (\"The address is\",st_number,street)\n",
     "\n"
    ]
   },
@@ -209,24 +279,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "three times 5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] define a variable with a string or numeric value\n",
-    "\n",
+    "x = \"three\"\n",
     "# [ ] display a message combining the variable, 1 or more literal strings and a number\n",
-    "\n",
+    "print (x,\"times\",5)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<font size=\"6\" color=\"#B24C00\"  face=\"verdana\"> <B>Task 5</B></font>   \n",
     "## Program: How many for the training?\n",
@@ -255,20 +334,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Attendee Sam\n",
+      "How many attending? 4\n",
+      "Time? 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a reservation for Sam for 4 people, beginning at 10\n",
+      "Please arrive at least 5 minuters early.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input for variables: owner, num_people, training_time  - use descriptive prompt text\n",
-    "owner = \n",
-    "num_people = \n",
-    "training_time = \n",
+    "owner = input(\"Attendee\")\n",
+    "num_people = input(\"How many attending?\")\n",
+    "training_time = input(\"Time?\")\n",
     "# [ ] create a integer variable min_early and \"hard code\" the integer value (e.g. - 5, 10 or 15)\n",
-    "min_early = \n",
+    "min_early = 5\n",
     "# [ ] print reminder text using all variables & add additional strings -  use comma separated print formatting\n",
-    "\n",
+    "print(\"There is a reservation for\",owner,\"for\",num_people,\"people, beginning at\",training_time)\n",
+    "print(\"Please arrive at least\",min_early,\"minuters early.\")\n",
     "\n"
    ]
   },
@@ -297,9 +398,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
