--- a/Python Absolute Beginner/Module_1_Practice_2_IntroPy.ipynb
+++ b/Python Absolute Beginner/Module_1_Practice_2_IntroPy.ipynb
@@ -24,30 +24,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Remind me? R\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for a variable named remind_me\n",
-    "\n",
+    "remind_me = input(\"Remind me?\")\n",
     "\n",
     "# [ ] print the value of the variable remind_me\n",
-    "\n"
+    "print(remind_me)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remember:  R\n"
+     ]
+    }
+   ],
    "source": [
     "# use string addition to print \"remember: \" before the remind_me input string\n",
-    "\n"
+    "print(\"remember: \",remind_me)\n"
    ]
   },
   {
@@ -66,26 +95,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Meeting Subject?  Home\n",
+      "Meeting Time? 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Home meeting is at 3\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for 2 variables: meeting_subject and meeting_time\n",
-    "\n",
+    "meeting_subject = input(\"Meeting Subject? \")\n",
+    "meeting_time = input(\"Meeting Time?\")\n",
     "\n",
     "# [ ] use string addition to print meeting subject and time with labels\n",
-    "\n",
+    "print(\"The\",meeting_subject,\"meeting is at\",meeting_time)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## print() formatting \n",
     "### combining multiple strings separated by commas in the print() function"
@@ -93,80 +140,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wednesday is in the middle of the week.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the combined strings \"Wednesday is\" and \"in the middle of the week\" \n",
-    "\n"
+    "print(\"Wednesday is\",\"in the middle of the week.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remember to R\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print combined string \"Remember to\" and the string variable remind_me from input above\n",
-    "\n"
+    "print(\"Remember to\", remind_me)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remind R about the Home meeting at 3\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Combine 3 variables from above with multiple strings\n",
-    "\n"
+    "print(\"Remind\", remind_me, \"about the\", meeting_subject, \"meeting at\", meeting_time)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### print() quotation marks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hal's Moving Castle\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print a string sentence that will display an Apostrophe (')\n",
     "\n",
-    "\n"
+    "\n",
+    "print(\"Hal's Moving Castle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dog says, \"woof!\"\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print a string sentence that will display a quote(\") or quotes\n",
     "\n",
-    "\n"
+    "print('The dog says, \"woof!\"')\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Boolean string tests"
    ]
@@ -187,13 +286,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Alpha: True\n",
+      "Is Alhpanumeric: True\n",
+      "Starts with 'V': False\n",
+      "Is all lower case: True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete vehicle tests \n",
+    "print(\"All Alpha:\",\"vehicle\".isalpha())\n",
+    "print(\"Is Alhpanumeric:\",\"vehicle\".isalnum())\n",
+    "print(\"Starts with 'V':\",\"vehicle\".startswith(\"V\"))\n",
+    "print(\"Is all lower case:\",\"vehicle\".islower())\n",
     "\n",
     "\n",
     "\n",
@@ -202,21 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print True or False if color starts with \"b\" \n",
-    "\n"
+    "print(\"color\".startswith(\"b\"))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
    "outputs": [],
    "source": []
@@ -230,67 +358,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The time is noon.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] print the string variable capital_this Capitalizing only the first letter\n",
     "capitalize_this = \"the TIME is Noon.\"\n",
-    "\n"
+    "capitalize_this.capitalize()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Who WRITES like This?'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print the string variable swap_this in swapped case\n",
     "swap_this = \"wHO writes LIKE tHIS?\"\n",
-    "\n"
+    "swap_this.swapcase()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'can you hear me?'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print the string variable whisper_this in all lowercase\n",
     "whisper_this = \"Can you hear me?\"\n",
-    "\n"
+    "whisper_this.lower()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CAN YOU HEAR ME NOW!?'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print the string variable yell_this in all UPPERCASE\n",
     "yell_this = \"Can you hear me Now!?\"\n",
-    "\n"
+    "yell_this.upper()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a string to reformat:  WJEfwojifjowjiifWIFNWOFN\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper: WJEFWOJIFJOWJIIFWIFNWOFN\n",
+      "Lower: wjefwojifjowjiifwifnwofn\n",
+      "Swap: wjeFWOJIFJOWJIIFwifnwofn\n",
+      "Caitalize Wjefwojifjowjiifwifnwofn\n"
+     ]
+    }
+   ],
    "source": [
     "#format input using .upper(), .lower(), .swapcase, .capitalize()\n",
     "format_input = input('enter a string to reformat: ')\n",
-    "\n"
+    "print(\"Upper:\",format_input.upper())\n",
+    "print(\"Lower:\",format_input.lower())\n",
+    "print(\"Swap:\",format_input.swapcase())\n",
+    "print(\"Caitalize\",format_input.capitalize())\n"
    ]
   },
   {
@@ -302,47 +510,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Name a color: Purple\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your color in lower case: purple\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for a variable named color\n",
     "# [ ] modify color to be all lowercase and print\n",
-    "\n"
+    "color = input(\"Name a color:\")\n",
+    "print(\"Your color in lower case:\",color.lower())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What do you want to be reminded about? WJFIWJFWONfwnoonffowunfonwFOWFNOWNEF\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Don't forget to wjfiwjfwonfwnoonffowunfonwfowfnownef!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input using variable remind_me and format to all **lowercase** and print\n",
     "# [ ] test using input with mixed upper and lower cases\n",
-    "\n"
+    "remind_me = input(\"What do you want to be reminded about?\")\n",
+    "print(\"Don't forget to\",remind_me.lower() + \"!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What do you want to yell? hi\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI!\n"
+     ]
+    }
+   ],
    "source": [
     "# [] get user input for the variable yell_this and format as a \"YELL\" to ALL CAPS\n",
-    "\n"
+    "yell_this = input(\"What do you want to yell?\")\n",
+    "print(yell_this.upper() + \"!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -357,36 +625,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Name some animals dog rat mouse\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for the name of some animals in the variable animals_input\n",
-    "\n",
+    "animals_input = input(\"Name some animals\")\n",
     "\n",
     "# [ ] print true or false if 'cat' is in the string variable animals_input\n",
-    "\n"
+    "print(\"cat\" in animals_input)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Name a color bLUE\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does it start with 'b'? True\n",
+      "Your input: bLUE\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get user input for color\n",
-    "\n",
+    "color = input(\"Name a color\")\n",
     "\n",
     "# [ ] print True or False for starts with \"b\"\n",
-    "\n",
+    "print(\"Does it start with 'b'?\",color.startswith(\"b\"))\n",
     "\n",
     "# [ ] print color variable value exactly as input \n",
     "#     test with input: \"Blue\", \"BLUE\", \"bLUE\"\n",
-    "\n",
+    "print(\"Your input:\", color)\n",
     "\n",
     "\n"
    ]
@@ -415,26 +717,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the name a single things that can be read book\n",
+      "Enter the name three things that can be read book newspaper website\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "item found = True\n"
+     ]
+    }
+   ],
    "source": [
     "# project: \"guess what I'm reading\"\n",
     "\n",
     "# 1[ ] get 1 word input for can_read variable\n",
-    "\n",
+    "can_read = input(\"Enter the name a single things that can be read\")\n",
     "\n",
     "# 2[ ] get 3 things input for can_read_things variable\n",
-    "\n",
+    "can_read_things = input(\"Enter the name three things that can be read\")\n",
     "\n",
     "# 3[ ] print True if can_read is in can_read_things\n",
-    "\n",
+    "print(can_read in can_read_things)\n",
     "\n",
     "# [] challenge: format the output to read \"item found = True\" (or false)\n",
     "# hint: look print formatting exercises\n",
-    "\n"
+    "print(\"item found =\",can_read in can_read_things)\n"
    ]
   },
   {
@@ -466,26 +788,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter categories of food eaten in the last 24 hours: Dairy, SEAFOOD, steak, peanuts\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is True that \"Dairy, SEAFOOD, steak, peanuts\" contains \"dairy\"\n",
+      "It is True that \"Dairy, SEAFOOD, steak, peanuts\" contains \"nuts\"\n",
+      "It is True that \"Dairy, SEAFOOD, steak, peanuts\" contains \"seafood\"\n",
+      "It is False that \"Dairy, SEAFOOD, steak, peanuts\" contains \"chocolate\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Allergy check \n",
     "\n",
     "# 1[ ] get input for test\n",
-    "\n",
+    "input_test = input(\"Enter categories of food eaten in the last 24 hours:\")\n",
+    "input_test_lower = input_test.lower()\n",
     "\n",
     "# 2/3[ ] print True if \"dairy\" is in the input or False if not\n",
-    "\n",
+    "print (\"It is\",\"dairy\" in input_test_lower,'that \"' + input_test +'\" contains \"dairy\"')\n",
     "\n",
     "# 4[ ] Check if \"nuts\" are in the input\n",
+    "print (\"It is\",\"nuts\" in input_test_lower,'that \"' + input_test +'\" contains \"nuts\"')\n",
     "\n",
     "# 4+[ ] Challenge: Check if \"seafood\" is in the input\n",
+    "print (\"It is\",\"seafood\" in input_test_lower,'that \"' + input_test +'\" contains \"seafood\"')\n",
     "\n",
     "# 4+[ ] Challenge: Check if \"chocolate\" is in the input\n",
-    "\n"
+    "print (\"It is\",\"chocolate\" in input_test_lower,'that \"' + input_test +'\" contains \"chocolate\"')\n"
    ]
   },
   {
@@ -513,9 +859,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
